<resources>
    <string name="app_name">LDSTU</string>
    <string name="action_settings">Settings</string>
    <string name="input_userName">用户名</string>
    <string name="input_password">密码</string>
    <string name="button_login">登录</string>
    <string name="btn_forgetPsd">忘记密码？</string>
    <string name="btn_logo_text">龙鼎科技</string>
    <string name="bottom_bar_home">首页</string>

    <string name="menu_item_top">置顶</string>
    <string name="menu_item_delete">移除</string>
    <string name="form_toolbar_back">返回</string>
    <string name="form_toolbar_import">导入</string>
    <string name="form_toolbar_save">保存</string>
    <string name="icon_bottomBar_yonghu">&#xe62d;</string><!--用户-->
    <string name="icon_bottomBar_lianxi">&#xe626;</string><!--练习-->
    <string name="icon_bottomBar_kaoshi">&#xe62b;</string><!--考试-->
    <string name="icon_bottomBar_bisai">&#xe61d;</string><!--比赛-->
    <string name="icon_answer_del">&#xe634;</string><!--答题页面 移除错题-->
    <string name="icon_answer_fav">&#xe616;</string><!--收藏-->


    <string name="exe_danxuanti">单选题</string>
    <string name="exe_duoxuanti">多选题</string>
    <string name="exe_shifeiti">是非题</string>
    <string name="exe_gengduo">更多</string>


</resources>
