<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/root_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- 用户头像区域 -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.2"
            android:background="#ffffff">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/user"
                />
        </RelativeLayout>
        <!-- 用户名密码输入区域-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >
            <!-- 用户名 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="left"
                android:paddingRight="10dp"

                >
                <RelativeLayout
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:gravity="center_vertical"
                    android:background="@color/loginInputLeftLine"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp"
                    >
                    <EditText
                        android:id="@+id/edittext_username"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:background="@null"
                        android:singleLine="true"
                        android:cursorVisible="true"
                        android:layout_gravity="top"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/loginText"
                        android:textColorHint="@color/loginText"
                        android:textSize="15dp"
                        android:text="LD00050002"
                        android:hint="@string/input_userName" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/loginLine"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="top"/>
                </LinearLayout>
            </LinearLayout>
            <!-- 密码 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="left"
                android:paddingRight="20dp"
                >
                <RelativeLayout
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:gravity="center_vertical"
                    android:background="@color/loginInputLeftLine"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"

                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="45dp"
                    android:orientation="vertical"
                    >
                    <EditText
                        android:id="@+id/edittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:background="@null"
                        android:singleLine="true"
                        android:cursorVisible="true"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/loginEditText"
                        android:textColorHint="@color/loginHintText"
                        android:inputType="textPassword"
                        android:textSize="15dp"
                        android:hint="@string/input_password" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/loginLine"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="bottom"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="25dp"
                    android:layout_height="45dp"
                    android:orientation="vertical"
                    >
                    <CheckBox
                        android:id="@+id/login_savePassword"
                        style="@style/CheckBoxStyleSavePsd"
                        android:layout_width="25dp"
                        android:layout_height="43dp" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/loginLine"
                        android:layout_gravity="bottom"/>
                </LinearLayout>
            </LinearLayout>
            <!-- 下拉 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="left"
                android:paddingRight="10dp"
                >
                <RelativeLayout
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:gravity="center_vertical"
                    android:background="@color/loginInputLeftLine"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"

                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="vertical"
                    android:layout_marginRight="8dp"
                    >
                    <Spinner
                        android:id="@+id/spinner_loginType"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="5dp"


                        >
                    </Spinner>
                </LinearLayout>
            </LinearLayout>

            <!-- 登录 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="bottom|center_horizontal"

                >
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:text="@string/button_login"
                    android:background="@drawable/shape"
                    android:gravity="center_horizontal|center_vertical"
                    android:textSize="15sp"

                    android:textColor="#ffffff" />

            </LinearLayout>

            <!-- 忘记密码 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"

                >
                <TextView
                    android:id="@+id/btn_forgetPsd"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:text="@string/btn_logo_text"
                    android:gravity="center_horizontal|center_vertical"
                    android:textSize="13sp"
                    android:textColor="@color/loginLine"
                    />

            </LinearLayout>
        </LinearLayout>
        <!--  留白-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#ffffff">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                >
                <Button
                    android:text="离线练习"
                    android:id="@+id/login_offline"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="10sp"
                    android:textColor="@color/loginButton"
                    android:background="@drawable/login_btn_selector"
                    />

                <Button
                    android:text="立即注册"
                    android:id="@+id/login_register"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="10sp"
                    android:textColor="@color/loginButton"
                    android:background="@drawable/login_btn_selector"
                    />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>